--- a/app/src/main/res/layout/fragment_lens.xml
+++ b/app/src/main/res/layout/fragment_lens.xml
@@ -2,7 +2,8 @@
 <android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,7 +42,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:textColor="@color/colorValue" />
+                    tools:ignore="MissingPrefix"
+                    fontPath="fonts/Roboto-Bold.ttf" />
 
             </RelativeLayout>
 
@@ -67,7 +69,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:textColor="@color/colorValue" />
+                    tools:ignore="MissingPrefix"
+                    fontPath="fonts/Roboto-Bold.ttf" />
 
             </RelativeLayout>
 
@@ -93,7 +96,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:textColor="@color/colorValue" />
+                    tools:ignore="MissingPrefix"
+                    fontPath="fonts/Roboto-Bold.ttf" />
 
             </RelativeLayout>
 
@@ -119,7 +123,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:textColor="@color/colorValue" />
+                    tools:ignore="MissingPrefix"
+                    fontPath="fonts/Roboto-Bold.ttf" />
 
             </RelativeLayout>
 
