--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -2,7 +2,8 @@
 <android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +27,8 @@
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:text="@string/setting_icon_pack"
-                android:textStyle="bold" />
+                tools:ignore="MissingPrefix"
+                fontPath="fonts/Roboto-Bold.ttf" />
 
             <TextView
                 android:id="@+id/text_view_selected_icon_pack"
@@ -61,7 +63,8 @@
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:text="@string/setting_home_launcher"
-                android:textStyle="bold" />
+                tools:ignore="MissingPrefix"
+                fontPath="fonts/Roboto-Bold.ttf" />
 
             <TextView
                 android:id="@+id/text_view_selected_home_launcher"
@@ -99,7 +102,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/setting_highlight_color"
-                    android:textStyle="bold" />
+                    tools:ignore="MissingPrefix"
+                    fontPath="fonts/Roboto-Bold.ttf" />
 
                 <TextView
                     android:id="@+id/text_view_selected_highlight_color"
