Removed (most) fonts
Inconsistencies, not all elements wrapped by Calligraphy. Kept Roboto
Condensed for home screen

--- a/app/src/main/res/layout/fragment_lens.xml
+++ b/app/src/main/res/layout/fragment_lens.xml
@@ -2,8 +2,7 @@
 <android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,8 +41,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    tools:ignore="MissingPrefix"
-                    fontPath="fonts/Roboto-Bold.ttf" />
+                    android:textStyle="bold" />
 
             </RelativeLayout>
 
@@ -69,8 +67,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    tools:ignore="MissingPrefix"
-                    fontPath="fonts/Roboto-Bold.ttf" />
+                    android:textStyle="bold" />
 
             </RelativeLayout>
 
@@ -96,8 +93,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    tools:ignore="MissingPrefix"
-                    fontPath="fonts/Roboto-Bold.ttf" />
+                    android:textStyle="bold" />
 
             </RelativeLayout>
 
@@ -123,8 +119,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    tools:ignore="MissingPrefix"
-                    fontPath="fonts/Roboto-Bold.ttf" />
+                    android:textStyle="bold" />
 
             </RelativeLayout>
 
