Added ADW launcher icon pack filter
With check for duplicates

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,6 +3,7 @@
 
     <array name="icon_pack_launchers">
         <item>com.gau.go.launcherex.theme</item>
+        <item>org.adw.launcher.THEMES</item>
     </array>
 
     <array name="backgrounds">
