--- a/app/src/main/res/menu/menu_app_lens_launcher.xml
+++ b/app/src/main/res/menu/menu_app_lens_launcher.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/menu_item_element_app_info"
+        android:title="@string/menu_app_info"
+        android:visible="true" />
+
+    <item
         android:id="@+id/menu_item_element_uninstall"
         android:title="@string/menu_app_uninstall"
         android:visible="true" />
